# cpp-learning

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: cmake.yml
include/: fibonacci.hpp  fixed_point.hpp  prime.hpp  quantize.hpp
src/: main.cpp
