load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "hdrs",
    hdrs = glob(["include/*.hpp"]),
    includes = ["include"],      
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "demo",
    srcs = ["src/main.cpp"],
    deps = [":hdrs"],
    copts = ["-std=c++23"],
)
